<resources>
    <string name="app_name">CulArte</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Doilio A. Matsinhe</string>
    <string name="nav_header_subtitle">doiliomatsinhe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Sign out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="creating_database_instance">Creating Database Instance</string>
    <string name="fetching_database_instance">Fetching Database Instance</string>
    <string name="version">Version</string>
    <string name="version_nr">1.0.0</string>
    <string name="about_description">It is a platform that comes to unify art in Mozambique.\nGetting closer and closer to our artists, showing what our country has to offer when it comes to Art and Culture, helping to publish our artists and disseminate information related to them.</string>
    <string name="about_contact_us">Contact-Us</string>
    <string name="about_send_mail">Send an e-mail</string>
    <string name="about_instagram">Instagram</string>
    <string name="about_facebook">Facebook</string>
    <string name="about_github">Github</string>
    <string name="about_twitter">Twitter</string>
    <string name="about_dev_email">doiliomatsinhe@gmail.com</string>
    <string name="about_social_networks">Social Networks</string>
    <string name="about_instagram_id">doiliomatsinhe</string>
    <string name="about_facebook_id">doilio.matsinhe</string>
    <string name="about_github_id">doilio</string>
    <string name="about_twitter_id">DoilioMatsinhe</string>
    <string name="about_copyright">Copyright %d by Doilio Matsinhe</string>
    <string name="removed_from_favorite">Removed from favorites!</string>
    <string name="added_to_favorite">Added to favorites!</string>
    <string name="real_name_">real name, %s</string>
    <string name="not_available">N/A</string>
    <string name="telephone_nr_">tel: %s</string>
    <string name="mailto_">mailto: %s</string>
    <string name="profile_sharing">Check out %s\'s profile on CulArte! *link*</string>
    <string name="share_profile_">Share profile:</string>
    <string name="reporting_user_">Reporting user: %s</string>
    <string name="report_profile">Report profile</string>
    <string name="mail_to_">mailto: doiliomatsinhe@gmail.com</string>
    <string name="spotify_link_">https://open.spotify.com/artist/%s</string>
    <string name="deezer_package_name">deezer.android.app</string>
    <string name="deezer_link_">https://www.deezer.com/en/artist/%s</string>
    <string name="medium_package_name_">com.medium.reader</string>
    <string name="medium_site_">https://medium.com/@%s</string>
    <string name="linkedin_package_name_">com.linkedin.android</string>
    <string name="linkedin_site_">https://www.linkedin.com/in/%s</string>
    <string name="soundcloud_package_name">com.soundcloud.android</string>
    <string name="soundcloud_site_">https://soundcloud.com/%s</string>
    <string name="github_site_">https://github.com/%s</string>
    <string name="youtube_package_name">com.google.android.youtube</string>
    <string name="youtube_site_">http://youtube.com/channel/%s</string>
    <string name="twitter_package_name">com.twitter.android</string>
    <string name="twitter_site_one_">twitter://user?screen_name=%s</string>
    <string name="twitter_site_two_">http://twitter.com/intent/user?screen_name=%s</string>
    <string name="instagram_site_">http://instagram.com/_u/%s</string>
    <string name="instagram_package_name">com.instagram.android</string>
    <string name="facebook_package_name">com.facebook.katana</string>
    <string name="facebook_site_one_">fb://facewebmodal/f?href=http://m.facebook.com/%s</string>
    <string name="facebook_site_two_">fb://page/%s</string>
    <string name="facebook_site_three_">http://m.facebook.com/%s</string>
    <string name="no_categories">There are no public categories at this time, please check again later</string>
    <string name="empty_list">List is empty</string>
    <string name="send_comments">Send comments</string>
    <string name="how_can_we_improve">How can we improve?</string>
    <string name="download_app">Download CulArte at https://confirm.udacity.com/PKNCP76H and get in touch with our artists</string>
    <string name="share_using">Share using:</string>
    <string name="login_cancelled">Login Cancelled!</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="artist_image">Artist Image</string>
    <string name="contact">Contact</string>
    <string name="telephone">Telephone</string>
    <string name="e_mail">E-Mail</string>
    <string name="social_media">Social Media</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="github_icon">Github Icon</string>
    <string name="deezer_icon">Deezer Icon</string>
    <string name="linkedin_icon">LinkedIn Icon</string>
    <string name="medium_icon">Medium Icon</string>
    <string name="soundcloud_icon">Soundcloud Icon</string>
    <string name="spotify_icon">Spotify Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="youtube_icon">Youtube Icon</string>
    <string name="story">Story</string>
    <string name="favorites_empty">Favorites empty</string>
    <string name="favorites_list_is_empty">Favorites list is empty</string>
    <string name="add_artists_to_your_favorites_list_clicking_on_the_heart_icon_on_their_profile">Add artists to your favorites list clicking on the heart icon on their profile</string>
    <string name="screen_is_empty">Screen is empty</string>
    <string name="category_is_currently_empty">Category is currently empty</string>
    <string name="this_category_is_currently_empty_please_check_again_in_a_later_time">This Category is currently empty, please check again in a later time.</string>
    <string name="category_image">Category Image</string>
    <string name="cularte">CulArte</string>
    <string name="app_to_share_artists_portfolio_around_the_world">App to share artists portfolio around the world</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="story_not_available">Story Not Available</string>
    <string name="empty_widget">Empty Widget</string>
    <string name="empty">Empty</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="report">Report</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact-us</string>
    <string name="sign_out">Sign out</string>
    <string name="about">About</string>


</resources>
