<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/categoryFragment"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/favorites" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:onClick="shareApp"
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/share" />
        <item
            android:onClick="conctactUs"
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_white_24dp"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/sign_out"
            android:onClick="signOut"
            />
    </group>


</menu>
