<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.artistDetail.ArtistDetailFragment">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    android:contentDescription="@string/artist_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/pexels2" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_image">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/padding_normal"
                        android:paddingTop="@dimen/padding_normal"
                        android:paddingEnd="@dimen/padding_normal"
                        android:paddingBottom="64dp">

                        <TextView
                            android:id="@+id/artist_detail_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textSize="@dimen/text_size_title"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Name" />

                        <TextView
                            android:id="@+id/artist_detail_realname"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="@dimen/text_size_subtitle"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/artist_detail_name"
                            tools:text="real name, RealName."
                            tools:visibility="visible" />


                        <TextView
                            android:id="@+id/artist_detail_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/artist_detail_realname"
                            tools:text="This is Where the Short Description will be, This is Where the Short Description will be, This is Where the Short Description will be!" />

                        <TextView
                            android:id="@+id/artist_detail_contact_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/contact"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/artist_detail_description" />

                        <LinearLayout
                            android:id="@+id/linearlayout_contact"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/margin_small"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/artist_detail_contact_title">

                            <Button
                                android:id="@+id/button_telephone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="@dimen/weight"
                                android:backgroundTint="@color/colorPrimaryDark"
                                android:text="@string/telephone"
                                android:textColor="@android:color/white"
                                android:visibility="gone"
                                tools:visibility="visible"

                                />

                            <Button
                                android:id="@+id/button_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="@dimen/weight"
                                android:backgroundTint="@color/colorPrimaryDark"
                                android:text="@string/e_mail"
                                android:textColor="@android:color/white"
                                android:visibility="gone"
                                tools:visibility="visible" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/artist_detail_social_media"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/social_media"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/linearlayout_contact" />

                        <!--<TextView
                            android:id="@+id/social_media_empty"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/artist_detail_social_media"
                            tools:text="N/A" />-->


                        <com.google.android.flexbox.FlexboxLayout
                            android:id="@+id/flexboxLayout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_big"
                            android:layout_marginTop="@dimen/margin_small"
                            android:visibility="gone"
                            app:alignContent="stretch"
                            app:alignItems="stretch"
                            app:dividerDrawable="@drawable/divider"
                            app:flexWrap="wrap"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/artist_detail_social_media"
                            app:showDivider="middle"
                            tools:visibility="visible">

                            <ImageView
                                android:id="@+id/icon_instagram"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/instagram_icon"
                                app:srcCompat="@drawable/instagram" />

                            <ImageView
                                android:id="@+id/icon_facebook"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/facebook_icon"
                                app:srcCompat="@drawable/facebook" />

                            <ImageView
                                android:id="@+id/icon_github"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/github_icon"
                                app:srcCompat="@drawable/github" />

                            <ImageView
                                android:id="@+id/icon_deezer"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/deezer_icon"
                                app:srcCompat="@drawable/deezer" />

                            <ImageView
                                android:id="@+id/icon_linkedin"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/linkedin_icon"
                                app:srcCompat="@drawable/linkedin" />

                            <ImageView
                                android:id="@+id/icon_medium"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/medium_icon"
                                app:srcCompat="@drawable/medium" />

                            <ImageView
                                android:id="@+id/icon_soundcloud"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/soundcloud_icon"
                                app:srcCompat="@drawable/soundcloud" />

                            <ImageView
                                android:id="@+id/icon_spotify"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/spotify_icon"
                                app:srcCompat="@drawable/spotify" />

                            <ImageView
                                android:id="@+id/icon_twitter"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/twitter_icon"
                                app:srcCompat="@drawable/twitter" />

                            <ImageView
                                android:id="@+id/icon_youtube"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/youtube_icon"
                                app:srcCompat="@drawable/youtube" />
                        </com.google.android.flexbox.FlexboxLayout>

                        <TextView
                            android:id="@+id/artist_detail_story_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/story"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/flexboxLayout" />

                        <TextView
                            android:id="@+id/artist_detail_story"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/artist_detail_story_label"
                            tools:text="This is Where the Short Description will be, This is Where the Short Description will be, This is Where the Short Description will be,This is Where the Short Description will be, This is Where the Short Description will be! \n\nThis is Where the Short Description will be,This is Where the Short Description will be,This is Where the Short Description will be!\n\nThis is Where the Short Description will be!" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:src="@drawable/ic_share_white_24dp"
            app:fabSize="auto"
            app:layout_anchor="@id/scrollView"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>